--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 <!--Home Page-->
 <main class="home_page" id="homePage">
     <section class="home_page_paragraph">
-        <h1>Welcome To POS System</h1>
+        <h1>Welcome</h1>
     </section>
     <section id="image">
-        <img src="assets/img/pos%20capture%20(1).png" alt="">
+        <img src="assets/image/image4.png" alt="">
     </section>
     <!--Add bar graph-->
     <!--<div class="chart-wrap vertical">
@@ -60,19 +60,19 @@
     </div>-->
     <section class="count_details">
         <div>
-            <img src="assets/img/Customer.png" alt="customer.png">
+            <img src="assets/image/Customer.png" alt="customer.png">
             <h3 class="count_details_topic">Customer</h3>
             <h3 class="count">32</h3>
         </div>
 
         <div>
-            <img src="assets/img/item.png" alt="item.png">
+            <img src="assets/image/item.png" alt="item.png">
             <h3 class="count_details_topic">Item</h3>
             <h3 class="count">32</h3>
         </div>
 
         <div>
-            <img src="assets/img/order.png" alt="order.png">
+            <img src="assets/image/order.png" alt="order.png">
             <h3 class="count_details_topic">Order</h3>
             <h3 class="count">32</h3>
         </div>
